--- a/bitcoindata-science/src/custom.scss
+++ b/bitcoindata-science/src/custom.scss
@@ -11,5 +11,5 @@ $theme-colors: (
 );
 
 // Import Bootstrap and its default variables
-@import '~bootstrap/scss/bootstrap.scss';
+@import "~bootstrap/scss/bootstrap";
 @import './index.css'
